@@ -34,3 +34,4 @@ Merged changes:
 7259							: regex problems
 7261							: "user cancelled" error message
 7264							: theme fix
+7268							: ctrl-C/ctrl-A in filediff dialog
